--- a/registro-pet.css
+++ b/registro-pet.css
@@ -10,20 +10,10 @@ body {
 	font-family: 'Poppins', sans-serif;
 }
 
+/*NAVY BAR*/
 .wrapper {
 	width: 80%;
 	margin: 0 auto;
-}
-
-.wrapper2{
-	width:100%;
-	margin: 0 auto;
-}
-.wrapper2 p a{
-    text-decoration: none;
-    text-decoration:solid;
-    color: #3B5249;
-    font-weight: bold;
 }
 
 header {
@@ -58,221 +48,173 @@ nav a {
 	margin: 0 10px;
 	color: #fff;
 }
-
+/*Formulario*/
 .content-area {
 	width: 100%;
 	position: relative;
 	top: 100px;
 	background: #ebebeb;
-	height: 1250px;
-}
-.content-area h2 {
-	font-family: poppins;
-	letter-spacing: 1px;
-	padding-top: 30px;
-	font-size: 40px;
-	margin: 0;
-}
-.content-area p {
-	padding: 15px 0px;
-	font-family: poppins;
-	line-height: 30px;
+	height: 800px;
 }
 
-.btn{
-    background-color: #3B5249;
-    color: #fff;
+.titulo{ /*Casdastre seu pet*/
+    position: relative;
+    bottom: 40px;
+    padding: 20px;
     font-family: poppins;
-    text-decoration: none;
-    font-size: 16px;
-    width: 300px;
-    height: 40px;
-    border: none;
-    border-radius: 25px;
-    cursor: pointer;
-	transition: all .4s;
+	  letter-spacing: 1px;
+  	padding-top: 30px;
+	  font-size: 30px;
+  	margin: 0;
 }
-
-.btn:hover{
-    background-color: #2e3e38;
-	width: 325px;
-}
-
-.links-banner{
-	background-color: rgb(226, 226, 226);
-}
-
-/* formulario */
 
 .container{
-    top:35px;
     position:relative;
     left:50%;
     transform: translate(-50%);
     max-width: 1150px;
     width: 100%;
+    height: 525px;
     background-color: #fff;
-    padding: 45px 30px;
+    padding: 25px 30px;
     border-radius: 5px;
     box-shadow: 0 5px 10px rgba(0,0,0,0.15);
-  }
-  .container .title{
-      text-align: left;
-    font-size: 25px;
-    font-weight: bold;
-    position: relative;
-    bottom: 20px;
-  }
-  .container .title::before{
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 3px;
-    width: 30px;
-    border-radius: 5px;
-    background: linear-gradient(135deg, #2e3e38, #3B5249);
+    top: 80px;
   }
 
-  .user-details{
-      text-align: left;
-      font-weight: bold;
-  }
-
-  .gender-details{
-      text-align:left;
-  }
-  
-  .content form .user-details{
+  form{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 20px 0 12px 0;
-  }
-  form .user-details .input-box{
-    margin-bottom: 15px;
-    width: calc(100% / 2 - 20px);
-  }
-  form .input-box span.details{
-    display: block;
-    font-weight: 500;
-    margin-bottom: 5px;
-  }
-  .user-details .input-box input{
-    height: 45px;
-    width: 100%;
-    outline: none;
-    font-size: 16px;
-    border-radius: 5px;
-    padding-left: 15px;
-    border: 1px solid #ccc;
-    border-bottom-width: 2px;
-    transition: all 0.3s ease;
-  }
-  .user-details .input-box input:focus,
-  .user-details .input-box input:valid{
-    border-color: #59766b;
-  }
-  
-   form .gender-details .gender-title{
-    font-size: 20px;
-    font-weight: 500;
-   }
-   
-   form .category{
-     width: 70%;
-     margin: 14px 0 ;
-     justify-content: space-between;
-   }
-   form .category label{
-     display: flex;
-     align-items: center;
-     cursor: pointer;
-   }
-   form .category label .dot{
-    height: 18px;
-    width: 18px;
-    border-radius: 50%;
-    margin-right: 10px;
-    background: #d9d9d9;
-    border: 5px solid transparent;
-    transition: all 0.3s ease;
-  }
-   #dot-1:checked ~ .category label .one,
-   #dot-2:checked ~ .category label .two,
-   #dot-3:checked ~ .category label .three{
-     background: #59766b;
-     border-color: #d9d9d9;
-   }
-
-.photo{
-  position: relative;
-  left: 700px;
-  bottom: 130px;
+    flex-direction: column;
+    text-align: left;
+    align-items: center;
+    gap: 25px;
 }
 
+section{
+    display: flex;
+    gap: 100px;
+    position: relative;
+    bottom: 50px;
+    left: 20px;
+}
 
-   form input[type="radio"]{
-     display: none;
-   }
-   form .button{
-     height: 45px;
-     margin: 35px 0
-   }
-   form .button input{
-     height: 100%;
-     width: 100%;
+.divisao-1{ /*nome, cor, animal, foto*/
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start !important; 
+    position: relative;
+    bottom: 40px;
+}
+
+.divisao-2{ /*cidade, bairro, referencia, estado*/
+    display: flex;
+    flex-direction: column;
+}
+
+.name{
+  padding: 15px;
+  height: 40px;
+  width: 450px;
+}
+
+.divisao-1 input[type="file"]{
+  display: none;
+}
+
+.animal-photo{
+  position: relative ;
+  left: 70px ;
+  top: 30px;
+  width: 300px;
+  background-color: #2e3e38;
+  color: #FFF;
+  text-transform: uppercase;
+  text-align: center;
+  margin-top: 5px;
+  cursor: pointer;
+}
+
+.divisao-2 label{
+  padding: 15px;
+  height: 40px;
+  width: 450px;
+}
+
+.name{
+    font-size: 20px;
+    position: relative;
+    bottom: 5px;
+    right: 10px;
+}
+
+.holder{
+  outline: none;
+  font-size: 14px;
+  border-radius: 5px;
+  padding-left: 15px;
+  border: 1px solid #ccc;
+  border-bottom-width: 2px;
+  transition: all 0.3s ease;
+  height: 40px;
+  width: 450px;
+}
+
+.divisao-1 select{
+  outline: none;
+  font-size: 14px;
+  border-radius: 5px;
+  padding-left: 15px;
+  border: 1px solid #ccc;
+  border-bottom-width: 2px;
+  transition: all 0.3s ease;
+  height: 40px;
+  width: 450px;
+}
+
+#animal-select{
+  line-height: 1;
+  font-size: 18px;
+  border-radius: 5px;
+  border-bottom-width: 2px;
+  transition: all 0.3s ease;;
+}
+
+.divisao-2 select{
+  outline: none;
+  font-size: 14px;
+  border-radius: 5px;
+  padding-left: 15px;
+  border: 1px solid #ccc;
+  border-bottom-width: 2px;
+  transition: all 0.3s ease;
+  height: 40px;
+  width: 450px;
+}
+
+  button{ 
+     position: relative;
+     background:#2e3e38;
+     cursor: pointer;
+     font-weight: 500;
+     letter-spacing: 1px;
+     font-size: 18px;
      border-radius: 5px;
      border: none;
      color: #fff;
-     font-size: 18px;
-     font-weight: 500;
-     letter-spacing: 1px;
-     cursor: pointer;
-     transition: all 0.3s ease;
-     background: linear-gradient(135deg, #384c45, #59766b);
-   }
-   form .button input:hover{
-    /* transform: scale(0.99); */
-    background: linear-gradient(-135deg, #384c45, #59766b);
-    }
-   @media(max-width: 584px){
-   .container{
-    max-width: 100%;
-  }
-  form .user-details .input-box{
-      margin-bottom: 15px;
-      width: 100%;
-    }
-    form .category{
-      width: 100%;
-    }
-    .content form .user-details{
-      max-height: 300px;
-      overflow-y: scroll;
-    }
-    .user-details::-webkit-scrollbar{
-      width: 5px;
-    }
-    }
-    @media(max-width: 459px){
-    .container .content .category{
-      flex-direction: column;
-    }
+     background-size: 30px;
+     height: 45px;
+     width: 500px;
+     top: 70px;
+     right: 300px;
   }
 
-  .info-regis{
-      padding-top:30px;
-      font-size: 14px;
-      background-color: rgb(248, 248, 248);
-  }
-  
 
 /* footer */
 
 footer{
     background: #3B5249;
-    position: absolute;
+    position: relative;
     bottom: 0;
     left: 0;
     right: 0;
@@ -334,7 +276,7 @@ footer{
 .footer-bottom{
     background: #374d44;
     width: 100%;
-    padding: 1px 0;
+    padding: 5px 0;
     text-align: center;
 }
 
@@ -370,11 +312,3 @@ footer{
 ::-webkit-scrollbar-thumb{
 	background:#2e3e38;
 }
-
-
-
-
-
-
-
-
